--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 .gradle
-**/build/
+**/build/*
+
+# include jextract generated headers
+#!build/generated
+!build/generated/sources
+!build/generated/sources/jextract
+
 !src/**/build/
 
 !gradle-wrapper.jar
